--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,15 @@ input[type="range"]::-ms-thumb:active {
     transform: translateX(100px);
   }
 }
+.introduce7 {
+  animation: introduce7 1s linear 1;
+}
+@keyframes introduce7 {
+  0% {
+    transform: translateY(-30%);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
